--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.1",
   "description": "Logify, a logging framework",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/purposeindustries/node-logify"
@@ -24,5 +27,10 @@
     "extend-object": "^1.0.0",
     "logify-console-transport": "^0.1.0",
     "logify-syslog-levels": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^1.21.4",
+    "should": "^4.0.4",
+    "sinon": "^1.10.3"
   }
 }
