--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Logging framework for node and the browser",
   "main": "dist",
   "scripts": {
-    "prepublish": "babel src -d dist"
+    "prepublish": "babel src -d dist",
+    "test": "NODE_ENV=test mocha --require should --require co-mocha --compilers js:babel/register 'src/**/*.spec.js'"
   },
   "files": [
     "dist"
@@ -28,6 +29,9 @@
     "chalk": "^1.1.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23"
+    "babel": "^5.8.23",
+    "co-mocha": "^1.1.2",
+    "mocha": "^2.3.0",
+    "should": "^7.1.0"
   }
 }
