--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "logify",
-  "version": "0.2.0-rc.8.0",
+  "version": "0.2.1",
   "description": "Logging framework for node and the browser",
   "main": "dist",
   "scripts": {
     "prepublish": "babel src -d dist --optional runtime",
-    "test": "NODE_ENV=test mocha --require co-mocha --compilers js:babel/register 'src/**/*.spec.js'"
+    "test": "NODE_ENV=test mocha --require co-mocha --compilers js:babel/register 'src/**/*.spec.js' && NODE_ENV=test ava test-promises.js"
   },
   "files": [
     "dist"
@@ -31,6 +31,7 @@
     "reconnect-net": "0.0.0"
   },
   "devDependencies": {
+    "ava": "^0.2.0",
     "babel": "^5.8.23",
     "co-mocha": "^1.1.2",
     "mocha": "^2.3.0"
